3 pages are formated

--- a/013.tex
+++ b/013.tex
@@ -2,54 +2,31 @@
 
 \begin{entry}
 \word{sathxla, sathxLa}
-\src{kA}
-\gl{nA}
-\mng{paratatatxvX; adhAyxtamxsAdhakanu tananx BakitxmAgaRdalilx ErabeVkAda muKayx GaTaTx, haMta; idaralilx parxdhAnavAgi Bakatx, maheVsha, parxsAdi, pArxNaliMgi, sharaNa matutx aikayx eMba SaTasxthXlagaLive. ivu aMgasathxla, liMgasathxlagaLeMba eraDu parxkAragaLalilxyU ive. SaTasxthXlagaLalilx parxtiyoMdaralilxyU upaviBAgagaLidudx, avugaLalilx nalavatutxnAlukx aMgasathxlagaLu hAgU aivatetxVLu liMgasathxlagaLU idudx oTuTx nUroMdu muKayxsathxlagaLAgive. manuSayxnalilx sahajavAgiruva guNagaLu, shakitxgaLu, iMdirxyagaLeV muMtAduvu aneVka viBAgagaLAgi I sathxlagaLige saMbaMdhapaDutatxve:}
-\expl{sathxlaviDidu savaRdalAyatanAgi sahajaviDidu nijavaLavaTuTxdAgi adideMdenaluMTe (cenanxba. samava. 3-208-678); iMtiV nU\char'273\char'311MTusathxladalilx nipuNanAgi misharxSaDivxdhasathxla SaDusathxla tirxsathxla EkasathxlavAgi sathxla niHsathxlavaneyidx swrASaTxrXsoVmeVshavxraliMga tAnu tAnAgirabeVkayAyx (Adayayx. samava. 6-322-1020); sathxlamoMde tananx shakitxya misukinaMgasathxla liMgasathxlagaLeMderaDAyutx (shUnayxmaM. samava. 11-562-1224).}
-\mngnum{paratatatxvX; parabarxhamx:}
-\expl{EkaveMdenisida parabarxhamxviralu tAne sathxla (shivaciM. 48-5); anupamasathxlavenalu cinAmxtarxnA liMgavene shivaM tAneyaMgavenelekx jiVvaM (shivaciM. 48-10).}
-\mng{sathxLa:}
-\explnum{tiLupi jaMgamaliMga BakitxsathxLamanA tirxvidhaparxsAdasathxLamanamaLAcArapadamaM toV{\ri}daDe (basapu. 25-65). manuSayxnalilxruva guNagaLu, iMdirxyagaLu, shakitxgaLu iveV modalAdavugaLalilx aneVka viBAgagaLanunx mADutAtxre. I parxkAramADi avaru avugaLanunx kelavoMdu sathxLakekx saMbaMdhisutAtxre (shivAkoV. 11-17).}
-\end{entry}
-
-\begin{entry}
-\word{sathxla nUroMdu}
-\src{kA}
-\gl{nAmapada}
-\info{BeY.shA.}{3-160}{234}{1954}
-\begin{shl}
-tirxvidha parxsAda tiV\\
-thaRva mUvatAtxru ta\\
-tavxva sathxla nUroMdarariva\\
-tave sUtakAdi BeV\\
-davanelalx manujaroLf\\
-shivaBakatxradhikaveMbudanu
-\end{shl}
+\meaning{\arthanonum{paratatatxvX; adhAyxtamxsAdhakanu tananx BakitxmAgaRdalilx ErabeVkAda muKayx GaTaTx, haMta; idaralilx parxdhAnavAgi Bakatx, maheVsha, parxsAdi, pArxNaliMgi, sharaNa matutx aikayx eMba SaTasxthXlagaLive. ivu aMgasathxla, liMgasathxlagaLeMba eraDu parxkAragaLalilxyU ive. SaTasxthXlagaLalilx parxtiyoMdaralilxyU upaviBAgagaLidudx, avugaLalilx nalavatutxnAlukx aMgasathxlagaLu hAgU aivatetxVLu liMgasathxlagaLU idudx oTuTx nUroMdu muKayxsathxlagaLAgive. manuSayxnalilx sahajavAgiruva guNagaLu, shakitxgaLu, iMdirxyagaLeV muMtAduvu aneVka viBAgagaLAgi I sathxlagaLige saMbaMdhapaDutatxve.}
+\ullekha{sathxlaviDidu savaRdalAyatanAgi sahajaviDidu nijavaLavaTuTxdAgi adideMdenaluMTe (savasaM. 3; cenanxba. 678-208); iMtiV nU\char'273\char'311MTusathxladalilx nipuNanAgi misharxSaDivxdhasathxla SaDusathxla tirxsathxla EkasathxlavAgi sathxla niHsathxlavaneyidx swrASaTxrXsoVmeVshavxraliMga tAnu tAnAgirabeVkayAyx (savasaM. 6; Adayayx. 1020-322); sathxlamoMde tananx shakitxya misukinaMgasathxla liMgasathxlagaLeMderaDAyutx (savasaM. 11; shUnayxmaM. 1224-562).}}
+\newmeaning{\arthanonum{paratatatxvX; parabarxhamx.}
+\ullekha{EkaveMdenisida parabarxhamxviralu tAne sathxla (shivaciM. 48-5); anupamasathxlavenalu cinAmxtarxnA liMgavene shivaM tAneyaMgavenelekx jiVvaM (shivaciM. 48-10).}}
+\newmeaning{\arthanonum{sathxLa.}
+\ullekha{sahajadiMda nirAlaMbavAyitutx... ivarelalx namamx guheVshavxrana karasathxlada haMginalilx huTiTx beLedaru... (savasaM. 2; alalxma. 1576-468); IreVLuBuvanavanu oDalo?ge... liMgarUpanAgi Bakatxna karasathxlakekx baMdu pUjegoMDitutx noVDA!... (savasaM. 3; cenanxba. 1016-334); solilxge oMdu KaMDuga navaNe... A navaNeya hoyadxLeyabeVkeMdaDe sathxla sAladayAyx... (savasaM. 4; sidadhxrA. 1624-464); kakeSx Bakatxna soVMku... iMtiV Arusathxla SaTakxmaR SaDivxdhaliMga BeVdaMgaLalilx... (savasaM. 7; dAsoVsaM. 1086-338); sAdhayx sAdhakarilalxdaMdu... aMgasathxla liMgasathxlavAgadaMdu... (savasaM. 11; toVMTasi. 29-12); tiLupi jaMgamaliMga BakitxsathxLamanA tirxvidhaparxsAdasathxLamanamaLAcArapadamaM toV{\ri}daDe (basapu. 25-65). manuSayxnalilxruva guNagaLu, iMdirxyagaLu, shakitxgaLu iveV modalAdavugaLalilx aneVka viBAgagaLanunx mADutAtxre. I parxkAramADi avaru avugaLanunx kelavoMdu sathxLakekx saMbaMdhisutAtxre (shivAkoV. 11-17).}}
 \end{entry}
 
 \begin{entry}
 \word{sathxlakuLa, sathxLakuLa}
-\src{kA}
-\gl{nA}
-\mng{sathxladalilxya viBAgagaLu:}
-\expl{vishAvxsada haravariyalilx vishavxmaya sathxlakuLaMgaLAdavu (moVLige. samava. 8-710-2123); mUlava kitatxlilxye halavu baLiLx oNaguvaMte sathxlakuLaMgaLu BinanxBAvavAgi toV{\ru}va iravu a{\ri}talilxyeV naSaTxvAyitutx (bibibxbA. samava. 8-132-355).}
-\mngnum{sathxLakuLa:}
-\expl{sathxLakuLaMgaLa tiLidu SaDivxdhaliMgagaLalilx dhAyxnapUjAdigaLiMda aMgagoMDu Bavada baTeTxya meTiTxniMdalalxde SaTasxthXlabarxhimxgaLAgaru (akakxma. samava. 5-54-132); sathxLakuLavanetitxdalilx samayakekx dUra cidaCxna BeVda BeVdAMtavanetitxdalilx AdhAyxtamxkekx dUra (koVlashAM. samava. 7-43-92).}
+\meaning{\arthanonum{sathxladalilxya viBAgagaLu.}
+\ullekha{parxthamadalilx vasutx EnU EnU ilalxda... iMtu kuLasathxla sathxlakuLavaDagaloDane... (savasaM. 2; alalxma. 1365-403); nAnA mUlike pASANaMgaLalilx... nAnA vataRna sathxlakuLaMgaLanaridalilx... (savasaM. 6; avareV. 729-218); sathxlaveMbudu GaTa, kuLaveMbudu... iMtiV sathxlakuLavanarivudu mahAjAcnxna... (savasaM. 8; moVLimA. 2186-702); ayayx, iMtu kalAyxNapaTaTxNada... iMtu saMbaMdhAcaraNeya sathxlakuLaMgaLa cidebxLaginalilx shoVBisuva... (savasaM. 10; gurusi. 760-445); ayAyx, mahadAnaMda sadugxruvitatx... niraMjana cananxbasavaliMgAMgasathxlakuLavanaridu... (savasaM. 12; deVshikeVM. 78-24).}}
 \end{entry}
 
 \begin{entry}
 \word{sathxlajacnx}
-\src{kA}
-\gl{nA}
-\mng{SaTasxthXla, EkoVtatxrashatasathxla muMtAda sathxlagaLa sAravanunx garxhisidavanu:}
-\expl{anAcAradalilx AcAravaDagi Bakatxnalalxde BaviyAgi nitayxnalalxde anitayxnAgidadxvaMgalalxde mU{\ru}kuLavilalx
-A{\ru}kuLadalilx balalxvanalalxde iMtiva{\rO}LagAda nU{\rO}MdukuLakekx sathxlajacnxnalalx (moVLige. samava. 8-504-1446).}
+\meaning{\arthanonum{SaTasxthXla, EkoVtatxrashatasathxla muMtAda sathxlagaLa sAravanunx garxhisidavanu.}
+\ullekha{hagalu nAlukx jAva ashanakekx kudivaru... SaDusathxlajAcnxnigaLelAlx satatxralAlx guheVshavxrA. (savasaM. 2; alalxma. 1604-476); ayAyx, sAdhaka sidadhx avatArikareMba... SaTfsathxlajAcnxnadalilx sidadhxnAda sadugxru tAnu nitayxnimaRlanAdaDeyA... (savasaM. 3; cenanxba. 937-299); Arusathxladalilx niMdavaMge beVroMdu... Aru sathxlaveMbuva SaTfsathxlajAcnxnigaLa... (savasaM. 5; amurA. 603-190); baMdhamoVkaSxMgaLa BArxMtanaLidu... SaTfsathxlajAcnxnada vamaRva balalxnAgi... (savasaM. 6; Adayayx. 1029-317); shirxVpati shivaleMka paMDitArAdhayx... nAnAsathxlajacnxrugaLalilx varaparxsAdi cananxbasavaNaNx... (savasaM. 8; parxsABoV. 104-44).}}
 \end{entry}
 
 \begin{entry}
 \word{sathxlaBeVda}
 \src{saM}
-\mngnum{eraDu vidha-parabarxhamxsavxrUpi shivatatatxvXdoDane bereta mAyAshakitxya koSxVBeyiMda sathxlavu aMgasathxla matutx liMgasathxla eMdu eraDu vidhavAgutatxde. liMgasathxlavu upAsayx, aMgasathxlavu upAsaka, cinAmxtarxvAda liMgasathxlavu shiva, aMgasathxlavu jiVva.}
+\meaning{\artha{eraDu vidha-parabarxhamxsavxrUpi shivatatatxvXdoDane bereta mAyAshakitxya koSxVBeyiMda sathxlavu aMgasathxla matutx liMgasathxla eMdu eraDu vidhavAgutatxde. liMgasathxlavu upAsayx, aMgasathxlavu upAsaka, cinAmxtarxvAda liMgasathxlavu shiva, aMgasathxlavu jiVva.}}
+\smallskip
 \begin{shl}
 savxshakitxkoSxVBamAterxVNa sathxlaM tadf divxvidhaM BaveVtf |\\
 EkaM liMgasathxlaM porxVkatxmanayxdaMgasathxlaM samxqtamf ||\\
@@ -57,8 +34,11 @@ liMgasathxlamupAsayxM sAyxdaMgasathxlamupAsakamf |\\
 sathxlaM cinAmxtarxmeVva sAyxlilxMgaM sAyxciCxva Eva hi ||\\
 tathAMgaM jiVva Eva sAyxditi sheYviV parA sidhxtiH |
 \end{shl}
+\smallskip
 \pauthor{(a. sU., 2. 10, 13, 18-19)}
-\mngnum{Aruvidha liMgasathxlagaLu-liMgasathxlavu modalige iSaTxliMga, pArxNa\-liMga, BAvaliMga eMdu mUru vidhavAgutatxde. I mUru liMgasathxlagaLu matetx talA eraDeraDAgi oTuTx Aru liMgasathxlagaLAgutatxve. avu I riVtiyAgive-iSaTxliMgavu AcAraliMgasathxla, guruliMgasathxlaveMdU; pArxNaliMgavu shivaliMgasathxla, caraliMgasathxlaveMtalU; BAvaliMgavu parxsAda\-liMgasathxla, mahAliMgasathxlaveMdu Aru vidhavAgutatxve.}
+\smallskip
+\newmeaning{\artha{Aruvidha liMgasathxlagaLu-liMgasathxlavu modalige iSaTxliMga, pArxNa\-liMga, BAvaliMga eMdu mUru vidhavAgutatxde. I mUru liMgasathxlagaLu matetx talA eraDeraDAgi oTuTx Aru liMgasathxlagaLAgutatxve. avu I riVtiyAgive-iSaTxliMgavu AcAraliMgasathxla, guruliMgasathxlaveMdU; pArxNaliMgavu shivaliMgasathxla, caraliMgasathxlaveMtalU; BAvaliMgavu parxsAda\-liMgasathxla, mahAliMgasathxlaveMdu Aru vidhavAgutatxve.}}
+\smallskip
 \begin{shl}
 liMgasathxlaM tirxdhA jecnxVyaM tadeBxVdoV vaNaRyxteV karxmAtf |\\
 parxthamaM BAvaliMgaM sAyxdf divxtiVyaM pArxNaliMgakamf ||\\
@@ -70,8 +50,11 @@ pArxNaliMgaM BavateyxVva sAvxnuBUtiparxmANataH |\\
 guruliMgaM tathA{\char'263}cAraliMgamituyxBayasathxlamf |\\
 iSaTxliMgaM BavateyxVva satayxmukatxmidaM mayA ||
 \end{shl}
+\smallskip
 \pauthor{(a. sU., 3. 5-6, 17-20; caM. A., kirx. pA., 3. 23, 26-27)}
-\mngnum{Aru vidha aMgasathxlagaLu-aMgasathxlavu tAyxgAMga, BoVgAMga, yoVgAMgaveMdu mUru vidha. I mUru matetx talA eraDeraDu sathxlagaLAgi oTuTx Aru sathxlagaLAgutatxve. avu hiVgive-tAyxgAMgavu Bakatxsathxla, mAheVshavxrasathxla eMdU; BoVgAMgavu parxsAdisathxla, pArxNaliMgisathxla eMdU; yoVgAMgavu sharaNasathxla, aikayxsathxla eMdu oTuTx Aru sathxlagaLAgutatxve.}
+\smallskip
+\newmeaning{\artha{Aru vidha aMgasathxlagaLu-aMgasathxlavu tAyxgAMga, BoVgAMga, yoVgAMgaveMdu mUru vidha. I mUru matetx talA eraDeraDu sathxlagaLAgi oTuTx Aru sathxlagaLAgutatxve. avu hiVgive-tAyxgAMgavu Bakatxsathxla, mAheVshavxrasathxla eMdU; BoVgAMgavu parxsAdisathxla, pArxNaliMgisathxla eMdU; yoVgAMgavu sharaNasathxla, aikayxsathxla eMdu oTuTx Aru sathxlagaLAgutatxve.}}
+\smallskip
 \begin{shl}
 aMgasathxlaM tirxdhA jecnxVyamAcAyeRYH sUkaSxmXdashiRBiH |\\
 yoVgAMgaM parxthamaM porxVkatxM BoVgAMgaM tu divxtiVyakamf ||\\
@@ -81,8 +64,11 @@ pArxNaliMgiparxsAdiVti davxyaM BoVgAMgamiSayxteV ||\\
 mAheVshavxrasathxlaM Bakatxsathxla mituyxBayaM tathA |\\
 tAyxgAMgaM BavatiVteyxVvaM porxVcayxteV pAramAthiRkeYH ||
 \end{shl}
+\smallskip
 \pauthor{(a. sU., 4. 5-6, 12-13)}
-\mngnum{ipapxtetxVLu vidha-anAdi viVrasheYva sArasaMgarxhadalilx beVroMdu karxmadiMda ipapxtetxVLu sathxlagaLanunx nirUpisalAgide. avugaLu I riVtiyAgive-(1) piVThikAsUtarxsathxla, (2) anAdiBakatxlakaSxNasathxla, (3) AdirahitajaMgamasathxla, (4) shUnayxliMgasathxla, (5) niSakxlaliMgasathxla, (6) mahAliMgasathxla, (7) parxNavAkaqtiliMgasathxla, (8) vishavxjananasathxla. (9) piMDasathxla, (10) piMDacitfsathxla, (11) saMsAraheVyaBAgasathxla, (12) gurukAruNayxsathxla, (13) liMgadhAraNasathxla, (14) deVshikamahatatxvXsathxla, (15) sevxVSaTxliMgamAhAtamxyXsathxla, (16) caraliMgamAhAtamxyXsathxla, (17) parxsAdamAhAtamxyXsathxla, (18) pAdoVdakamahatatxvXsathxla, (19) BasamxmAhAtamxyX sathxla, (20) rudArxkaSx mahatatxvX sathxla, (21) paMcAkaSxra mahatatxvX sathxla, (22) Bakatxsathxla, (23) mAheVshavxrasathxla, (24) parxsAdisathxla, (25) pArxNaliMgisathxla, (26) sharaNasathxla, (27) aikayxsathxla.}
+\smallskip
+\newmeaning{\artha{ipapxtetxVLu vidha-anAdi viVrasheYva sArasaMgarxhadalilx beVroMdu karxmadiMda ipapxtetxVLu sathxlagaLanunx nirUpisalAgide. avugaLu I riVtiyAgive-(1) piVThikAsUtarxsathxla, (2) anAdiBakatxlakaSxNasathxla, (3) AdirahitajaMgamasathxla, (4) shUnayxliMgasathxla, (5) niSakxlaliMgasathxla, (6) mahAliMgasathxla, (7) parxNavAkaqtiliMgasathxla, (8) vishavxjananasathxla. (9) piMDasathxla, (10) piMDacitfsathxla, (11) saMsAraheVyaBAgasathxla, (12) gurukAruNayxsathxla, (13) liMgadhAraNasathxla, (14) deVshikamahatatxvXsathxla, (15) sevxVSaTxliMgamAhAtamxyXsathxla, (16) caraliMgamAhAtamxyXsathxla, (17) parxsAdamAhAtamxyXsathxla, (18) pAdoVdakamahatatxvXsathxla, (19) BasamxmAhAtamxyX sathxla, (20) rudArxkaSx mahatatxvX sathxla, (21) paMcAkaSxra mahatatxvX sathxla, (22) Bakatxsathxla, (23) mAheVshavxrasathxla, (24) parxsAdisathxla, (25) pArxNaliMgisathxla, (26) sharaNasathxla, (27) aikayxsathxla.}}
+\smallskip
 \begin{shl}
 athAtashAcxnAdi viVrasheYvasArasusaMgarxheV |\\
 sathxlAnayxtarx nigadayxMteV sapatxviMshatiBeVdataH ||\\
@@ -91,38 +77,50 @@ divxtiVyaM ... ||\\
 ................... ||\\
 sharaNasathxlameYkayxsayx sathxlaM sAyxtf sapatxviMshatiH || 
 \end{shl}
+\smallskip
 \pauthor{(a. viV. sA. saM., 1. 47-58)}
-\mngnum{mUvatAtxru vidha-AcAraliMgasathxla modalAda Aru liMgasathxlagaLalilx parxtiyoMdu sathxlavU moVhi, Bakatx, pUjaka, viVra, parxsAdi, pArxNi eMdu Aru vidhavAgi oTuTx mUvatAtxru sathxlagaLAgutatxve.}
+\smallskip
+\newmeaning{\artha{mUvatAtxru vidha-AcAraliMgasathxla modalAda Aru liMgasathxlagaLalilx parxtiyoMdu sathxlavU moVhi, Bakatx, pUjaka, viVra, parxsAdi, pArxNi eMdu Aru vidhavAgi oTuTx mUvatAtxru sathxlagaLAgutatxve.}}
+\smallskip
 \begin{shl}
 moVhiV BakatxH pUjakashacx tathA viVraH parxsAdavAnf |\\
 pArxNiV cAcAraliMgAdiH sa veY BakotxV{\char'263}pi SaDivxdhaH ||\\
 EkeYkaM SaDivxdhaM porxVkatxM teVna SaTftirxMshatAM gatamf |
 \end{shl}
+\smallskip
 \pauthor{(sU. A., kirx. pA., 8-37, 76)}
-\mngnum{nUroMdu sathxla-44 aMgasathxlagaLu, 57 liMgasathxlagaLu seVri oTuTx 101 sathxlagaLu. (piMDasathxladiMda jAcnxnashUnayxsathxladavaregina 101 sathxlagaLu).}
+\smallskip
+\newmeaning{\artha{nUroMdu sathxla-44 aMgasathxlagaLu, 57 liMgasathxlagaLu seVri oTuTx 101 sathxlagaLu. (piMDasathxladiMda jAcnxnashUnayxsathxladavaregina 101 sathxlagaLu).}}
+\smallskip
 \begin{shl}
 piMDAdijAcnxnashUnAyxMtameVkoVtatxrashatasathxlamf |
 \end{shl}
+\smallskip
 \pauthor{(kirx. sA., BA-1, pu. 11)}
+\smallskip
+\newmeaning{\ullekha{dhada mUlada beVrina gaMdha... savaRsathxlaBeVda... (savasaM. 5; moVLima. (vacana saMcaya)); kirxVguNa shudadhxvAdalilx BAvaguNa shudadhx... A SaDusathxlada BAvaMgaLe BinanxBAvavAgi nAnA sathxlaBeVda varxtavAyitutx... (savasaM. 6; EleVshavx. 1676-639); jAtiratanxva suTaTxDe parxBe... iMtiV uBayasathxlaBeVdavanaridAcarisabeVku... (savasaM. 6; avareV. 690-203); aikayxsathxlada leVpajAcnxna vivara... iMtivu tirxvidhasathxladaMte ipupxdu aikayxna apiRta sathxlaBeVda... (savasaM. 8; parxsABoV. 31-15); huLi beLedu sihiyaha teranuMTu... iMtiV uBayasathxlaBeVda tadABxvavalalxde anayxvalalx... (savasaM. 8; bibibxbA. 308-122).}}
 \end{entry}
 
 \begin{entry}
 \word{sathxlaleVpa}
-\src{va}
-\mng{sAdhakanu tananx guriyanunx inUnx muTaTxdeV iruvAga tananx AdhAyxtimxka dAriyanunx Bakatxsathxla, maheVshavxrasathxla, itAyxdiyAgi viMgaDisutAtxne. Adare aikayxsathxlavanunx sAdhisida meVle sAdhaka sAdhayx sididhx ivugaLa vayxtAyxsa ilalxvAgi sathxla mUvatAtxrU iruvudilalx, ArU iruvudilalx, aMgasathxla liMgasathxla eMba eraDu sathxlagaLU iruvudilalx. Aga iruvudelAlx oMdeV sathxla. aikayxnAdavanu A oMdeV sathxlavanunx tananx jiVvanada parxti aMgakUkx leVpisikoMDirutAtxne. (8:2005).}
+\meaning{\arthanonum{sAdhakanu tananx guriyanunx inUnx muTaTxdeV iruvAga tananx AdhAyxtimxka dAriyanunx Bakatxsathxla, maheVshavxrasathxla, itAyxdiyAgi viMgaDisutAtxne. Adare aikayxsathxlavanunx sAdhisida meVle sAdhaka sAdhayx sididhx ivugaLa vayxtAyxsa ilalxvAgi sathxla mUvatAtxrU iruvudilalx, ArU iruvudilalx, aMgasathxla liMgasathxla eMba eraDu sathxlagaLU iruvudilalx. Aga iruvudelAlx oMdeV sathxla. aikayxnAdavanu A oMdeV sathxlavanunx tananx jiVvanada parxti aMgakUkx leVpisikoMDirutAtxne.}
+\ullekha{batitxVsAyudhavanu anaMta dina... A manavu AliMgada neleyalilx niMdu sathxlaleVpavAda matetx... (savasaM. 2; alalxma. (vacana saMcaya)); rasa gaMdha rUpu shabadx sapxshaR... aikayxsathxlaleVpaBeVda... (savasaM. 8; parxsABoV. 83-35); devxYtaveMdaDe tAnidiru eMbudu... alilxye sathxlaleVpa loVpa, sadoyxVjAtaliMga baTaTxbayalu... (savasaM. 6; avareV. 749-224); kusuma gaMdha[va] upadaqSaTxdiMda... uBayasathxlaleVpavAda sharaNa. (savasaM. 8; moVLimA. 1787-556).}}
 \end{entry}
 
 \begin{entry}
 \word{sathxlaSaTakx}
 \src{saM}
-\mng{Bakitx, kamaRkaSxya, budidhx, vicAra, dapaRnAsha, samayxgfjAcnxna eMba sakxlaSaTakxgaLu. I Aru paramAtamxna upAMgagaLu. Bakatxsathxla itAyxdi Aru sathxlagaLu matutx savaRjacnxtavx muMtAda shivana aMgagaLoMdige ivu parasapxra saMbaMdhisive. savaRjacnxteyeV Bakitx, taqpitxyeV kamaRkaSxya, anAdiboVdhaveV budidhx, savxtaMtarxteyeV vicAra, alupatxshakitxyeV dapaRkaSxya matutx anaMtashakitxyeV samayxgfjAcnxnavanunx koDuvaMtahavu.}
+\meaning{\arthanonum{Bakitx, kamaRkaSxya, budidhx, vicAra, dapaRnAsha, samayxgfjAcnxna eMba sakxlaSaTakxgaLu. I Aru paramAtamxna upAMgagaLu. Bakatxsathxla itAyxdi Aru sathxlagaLu matutx savaRjacnxtavx muMtAda shivana aMgagaLoMdige ivu parasapxra saMbaMdhisive. savaRjacnxteyeV Bakitx, taqpitxyeV kamaRkaSxya, anAdiboVdhaveV budidhx, savxtaMtarxteyeV vicAra, alupatxshakitxyeV dapaRkaSxya matutx anaMtashakitxyeV samayxgfjAcnxnavanunx koDuvaMtahavu.}}
+\smallskip
 \begin{shl}
 atha vakaSxyX visheVSaM teV shurxNuSevxYkamanAH shiveV |\\
 upAMgaSaTakxmaparaM BakAtxyXdiparamaM padamf ||\\
 BakitxH kamaRkaSxyoV budidhxviRcAroV dapaRsaMkaSxyaH |\\
 samayxgfjAcnxnamiti porxVkatxM sathxlaSaTakxM mama pirxyamf ||
 \end{shl}
+\smallskip
 \pauthor{(pAra. A., 6. 40-41)}
+\smallskip
 \begin{shl}
 upAMgaSaTakxmeVtadidhx BakAtxdisathxlaSaTakxkamf |\\
 yasayx savaRjacnxtA BakitxyAR taqpitxH kamaRsaMkaSxyA |\\
@@ -130,86 +128,56 @@ anAdiboVdhoV yA budidhxviRcAroV meV savxtaMtarxtA ||\\
 alupatxshakitxriti yA sA ca meV gavaRsaMkaSxyA |\\
 anaMtashakitxriti meV samayxgfjAcnxnaM dadAti sA ||
 \end{shl}
+\smallskip
 \pauthor{(pAra. A., 6. 60-62)}
-\end{entry}
-
-\begin{entry}
-\word{sathxlAleVKa}
-\src{kA}
-\gl{nAmapada}
-\info{shi.vA.sU}{aSaTxmAdhikaraNa-27}{130}{1958}
-\begin{shl}
-shilAleVKa sathxlAleVKA julaleVKA tirxdhAkarxmAtf\\
-shuBAshuBAtimxkA kamaR jAcnxna Bakitx kirxyAmatA
-\end{shl}
-\end{entry}
-
-\begin{entry}
-\word{sathxLakuLa}
-\src{kA}
-\gl{nAmapada}
-\info{BeY.kA.}{saM-1 pa-367}{106}{1954}
-\begin{shl}
-sakaleVMdirxyagaLoLu\\
-liKina liMgava hasatx\\
-bakutiyapiRtadavadAnA\\
-muKavAgi sathxLakuLA\\
-dhikava tiLidu tAne|\\
-mukutirUpAda sharaNA 
-\end{shl}
-\gl{nA}
-\mng{`sathxlakuLa'}
-\expl{noVDi.}
+\smallskip
+\newmeaning{\ullekha{BakatxnAdaDe citatx nishacxlavAgi sadaBxkitx... samayxjAcnxnamiti pArxjecnxYHsathxlaSaTakxmudAhaqtamf||... (savasaM. 14; SaNumxKa. 622-287).}}
 \end{entry}
 
 \begin{entry}
 \word{sapxrushana}
-\src{kA}
-\gl{nA}
-\mng{cAkuSxSi, sapxshaR, maMtarx, jAcnxna, kirxyAvatiR eMba aidu bageya diVkeSxgaLalilx oMdu; diVkASxkAladalilx guruvu tananx balageYyanunx shiSayxna taleya meVliTuTx shivananunx AvAhane mADuvudu:}
-\expl{guru ...shiSayxmasatxkadoLaM dakiSxNada hasatxmaM maDaguta parashivananAhAvxnamaM mADuvA diVkeSx sapxrushanaM (viVsheYpu. 6-97-65).}
+\meaning{\arthanonum{cAkuSxSi, sapxshaR, maMtarx, jAcnxna, kirxyAvatiR eMba aidu bageya diVkeSxgaLalilx oMdu; diVkASxkAladalilx guruvu tananx balageYyanunx shiSayxna taleya meVliTuTx shivananunx AvAhane mADuvudu.}
+\ullekha{ayAyx, nimamx sharaNara kaMDa kaDu... darushana sapxrushanadiMdAnu dhanayxnAdenu. (savasaM. 1; basava. 992-267); sadugxru kAruNayxva paDedu... maqdu kaThiNa shiVtoVSaNxMgaLanu sapxrushanadiMdapiRsuvaMte... (savasaM. 3; cenanxba. 227-71); ayAyx, nimamx sharaNara anuBAvasaMga... avara shirxVpAdaMgaLalilx enanx shirasapxrushanadiMda... (savasaM. 6; uripe. 1286-410); aMgaliMga samarasavAdalalxde... sapxrushanAdigaLa mADanayayx nimamx sharaNanu... (savasaM. 10; jakakxNa. 1619-699); meVSana danigeVLi huli baliya... kariyu sapxrushaneVMdirxyadalilx maDidaMte... (savasaM. 14; heVmaga. 1099-507); guru ...shiSayxmasatxkadoLaM dakiSxNada hasatxmaM maDaguta parashivananAhAvxnamaM mADuvA diVkeSx sapxrushanaM (viVsheYpu. 6-97-65).}}
 \end{entry}
 
 \begin{entry}
 \word{sapxshaRdiVkASx}
-\src{saM}
-\mng{diVkASxkAladalilx shirxVguruvu tananx balahasatxdalilx savARMgagaLiMda kUDiruva shivananunx irisi, shiSayxna shirasusx muMtAda BAgagaLanunx sapxshiRsuvudu.}
+\meaning{\arthanonum{diVkASxkAladalilx shirxVguruvu tananx balahasatxdalilx savARMgagaLiMda kUDiruva shivananunx irisi, shiSayxna shirasusx muMtAda BAgagaLanunx sapxshiRsuvudu.}}
+\smallskip
 \begin{shl}
 nidhAya dakiSxNeV hasetxV shivaM savARMgasaMyutamf |\\
 saMsapxqqsheVciCxSayx mUdhARni sapxshaRdiVkASx BaveVdiyamf ||
 \end{shl}
+\smallskip
 \pauthor{(shi. ta. ra., 9. 7. 28; sheY. pa., 5, pu. 136)}
-\SEE{diVkASx}
+\smallskip
+\newmeaning{\arthanonum{\SEE{diVkASx}}}
 \end{entry}
 
 \begin{entry}
 \word{sapxshaRna parxsAda}
-\src{va}
-\mng{moVkASxthiRyAgi baMda shiSayxnige liMgadiVkeSxyanunx koDuva samayadalilx guruvu shiSayxna masatxkavanunx tananx hasatxdiMda vidhibadadhxvAgi muTiTxdAga Aguva sapxshaRnaveV shiSayxna pAlige sapxshaRna parxsAda (11:1023).}
+\meaning{\arthanonum{moVkASxthiRyAgi baMda shiSayxnige liMgadiVkeSxyanunx koDuva samayadalilx guruvu shiSayxna masatxkavanunx tananx hasatxdiMda vidhibadadhxvAgi muTiTxdAga Aguva sapxshaRnaveV shiSayxna pAlige sapxshaRna parxsAda (11:1023).}
+\ullekha{basavaNaNx, cenanxbasavaNaNx, parxBudeVvaru... susapxshaRnadoLagaNa mahAsapxshaRnaparxsAdava koMDarayayx... (savasaM. 10; gurusi. 706-395); ayAyx GArxNadalilx niMdu... sapxshaRnaparxsAdavaniVvutitxpiRrayayx... (savasaM. 11; savxtaMtarx. 995-484); paqthivxya hiDidu AcAraliMgAnuBAviyAgi... sapxshaRnaparxsAdava kaMDu suKiyAdenayAyx... (savasaM. 12; deVshikeVM. 406-123); karasathxlada liMgavanu manasathxladalilx kuLiLxrisi... A susapxshaRnaparxsAdava garxhisabalAlxtane parxsAdi... (savasaM. 14; SaNumxKa. 662-301).}}
 \end{entry}
 
 \begin{entry}
 \word{sapxshaRnirasana}
-\src{kA}
-\gl{nA}
-\mng{ipapxtutxnAlukx shiVlagaLalilx oMdu; viSadamuLuLx, AyudhagaLu tAgida padAthaRgaLanUnx haMdi, nAyi, koVLi muMtAda pArxNigaLu noVDida athavA muTiTxda padAthaRgaLanunx tayxjisuvudu:}
-\expl{shasatxrX kaMTaka kiTi jaGanayx shuni mAjARla kukukxTaM noVDalakxmAnayxveMdava biDuvudeV tiLiyalA sapxshaRnirasanada shiVlamakukxM (viVsheYpu. 7-113-27).}
+\meaning{\arthanonum{ipapxtutxnAlukx shiVlagaLalilx oMdu; viSadamuLuLx, AyudhagaLu tAgida padAthaRgaLanUnx haMdi, nAyi, koVLi muMtAda pArxNigaLu noVDida athavA muTiTxda padAthaRgaLanunx tayxjisuvudu.}
+\ullekha{shasatxrX kaMTaka kiTi jaGanayx shuni mAjARla kukukxTaM noVDalakxmAnayxveMdava biDuvudeV tiLiyalA sapxshaRnirasanada shiVlamakukxM (viVsheYpu. 7-113-27).}}
 \end{entry}
 
 \begin{entry}
 \word{sapxshaRnoVdaka}
-\src{kA}
-\gl{nA}
-\mngnum{dashavidhapAdoVdakagaLalilx oMdu; (kirxyAdaqSiTxganuguNavAgi) tananx beraLugaLiMda nAlageya meVliTuTxkoMDaMtaha pAdoVdaka:}
-\expl{sapxshaRnoVdaka avadhAnoVdaka iveraDu A liMgamasatxkada meVle niVDi aMguligaLa jihevxyalilx iTuTxkoMDaMtaha gurupAdoVdakadalilx saMbaMdhavu (cenanxba. samava. 3-514-1432); jihevxyalilx sivxVkarisidalilx sapxshaRnoVdakavu (shivAkoV. 104-141).}
-\mngnum{jaMgamara pAdagaLanunx tananx keYgaLiMda muTuTxvudu:}
-\expl{kirxyApAdoVdaka mADabeVkAdaDe ...tananx hasatxdiMda pAdava muTiTx mADidaMtahade sapxshaRnoVdakavenisuvudu (cenanxba. samava. 3-599-1631); savxya cara para guru caramUtiRgaLa apiRtAvadhAnava nilukaDeyeMteMdaDe ...hasatxviTuTx sapxshaRnava mADe sapxshaRnoVdakavenisuvadayayx (sidadhxrA. samava. 4-51). tAtivxka daqSiTxyiMda keLage heVLidaMte ivugaLanunx vivarisabahudAgide ...catudaRLa vikasitavAgalu sapxshaRnoVdakavu (shivAkoV. 104-141).}
+\meaning{\artha{dashavidhapAdoVdakagaLalilx oMdu; (kirxyAdaqSiTxganuguNavAgi) tananx beraLugaLiMda nAlageya meVliTuTxkoMDaMtaha pAdoVdaka.}
+\ullekha{jihevxyalilx sivxVkarisidalilx sapxshaRnoVdakavu (shivAkoV. 104-141).}}
+\newmeaning{\artha{jaMgamara pAdagaLanunx tananx keYgaLiMda muTuTxvudu.}
+\ullekha{ayayx! diVkASxguru, shikASxguru... sapxshaRnoVdaka, avadhAnoVdaka, gurupAdoVdaka... (savasaM. 2; alalxma. 789-222); sharaNagaNaMgaLAdaDeyA... sapxshaRnoVdakavenisuvudu... (savasaM. 3; cenanxba. (vacana saMcaya)); ayAyx, jagatApxvana nimitayxthaRvAgi... hasatxviTuTx sapxshaRnava mADe sapxshaRnoVdakavenisuvadayayx... (savasaM. 4; sidadhxrA. 71-21); neVtarxdalilx SaDuvaNaRsaMbaMdhavaha... paruSanadiM liMgaparuSanakekx apiRtava mADuvalilx sapxshaRnoVdakavu... (savasaM. 6; uripe. 1426-491); ayayx, EkaviMshatidiVkeSxya nilukaDe... sapxshaRnoVdaka, apAyxyanaparxsAdavAgi nelasipaRru noVDa... (savasaM. 10; gurusi. 742-430); tAtivxka daqSiTxyiMda keLage heVLidaMte ivugaLanunx vivarisabahudAgide ...catudaRLa vikasitavAgalu sapxshaRnoVdakavu (shivAkoV. 104-141).}}
 \end{entry}
 
 \begin{entry}
 \word{sapxshaRparxsAda}
-\src{saM}
-\mng{pArxNaliMgiyu (pArxNaliMgasathxlada sAdhakanu) nAnA bageya sapxshaR padAthaRgaLanunx tegedukoMDu AdishakitxyiMda kUDiruva caraliMgakekx tavxknamxKa(camaRmuKa)dalilx samanoVhasatxdiMda samapiRsi, sivxVkarisuva parxsAda.}
+\meaning{\arthanonum{pArxNaliMgiyu (pArxNaliMgasathxlada sAdhakanu) nAnA bageya sapxshaR padAthaRgaLanunx tegedukoMDu AdishakitxyiMda kUDiruva caraliMgakekx tavxknamxKa(camaRmuKa)dalilx samanoVhasatxdiMda samapiRsi, sivxVkarisuva parxsAda.}}
+\smallskip
 \begin{shl}
 sapxshaRM samAdAya bahuparxkAraM samapiRtaM yacacxraliMgavaketxrXV |\\
 BuMketxV parxsAdAtamxtayoVpalabadhxM yaH pArxNaliMgiV savxyameVvamAtAmx ||\\
@@ -218,75 +186,46 @@ liMgeV sAkASxcaCxrAKeyxV tavxci jagati muKeV hAyxdishakitxparxyuketxV ||\\
 sapxrXSaTxvayxM cApaRyitAvx savxyamanuBavaBakitx parxBAvoVpapanonxV\\
 nitayxM sapxshaRparxsAdaM niratishayasuKaM tatatxvXveVtAtx BajeVta ||
 \end{shl}
+\smallskip
 \pauthor{(a. sU., 7. 40, 48)}
-\SEE{apaRNa, samapaRNa}
+\smallskip
+\newmeaning{\ullekha{pArxNaliMgige vAyuve aMga... A susapxshaRparxsAdavanu BoVgisi suKisutitxhanu... (savasaM. 3; cenanxba. 1372-486); ayAyx tatavx vitatavx shUnayx... gaMdhaparxsAda rasaparxsAda rUpuparxsAda sapxshaRparxsAda... (savasaM. 11; gumamxsi. 783-401).}}
+\smallskip
+\newmeaning{\arthanonum{\SEE{apaRNa, samapaRNa}}}
 \end{entry}
 
 \begin{entry}
 \word{sapxshaRyoVga}
-\src{kA}
-\gl{nA}
-\mng{yoVgapaMcakagaLalilx oMdu; paratatatxvXdalilx manasasxnunx aikayxgoLisuvudu:}
-\expl{maMtarxyoVgasahitamAgi manapavanaMgaLoMdugUDi mUlAdhAradiM suSumAnxnADiV mAgaRdoLeYdi shiroVmadhayxgata paramAtamx teVjasisxnoLA manoVlayavahudeV sapxshaRyoVga (viveVka. 49).}
-\end{entry}
-
-\begin{entry}
-\word{saPxTikaliMga}
-\src{kA}
-\gl{nAmapada}
-\info{shirxV.si.ma.saM.}{15/4}{219}{}
-\begin{shl}
-alilxgeYtaMdu taMtamamx manadoLu nenedu-|\\
-delalxmaM paDedu suKadiMdire BasitaveraDa-|\\
-ralilxyoMdaM saPxTikaliMgavaM mADikoDeyAM shivaBakatxnahenu||\,4\,||
-\end{shl}
-\end{entry}
-
-\begin{entry}
-\word{samxra PAlAkaSx}
-\src{kA}
-\gl{}
-\info{navamugadhxliVle}{8/67}{74}{}
-\begin{shl}
-samxramayAMbarapuramahABiV\\
-karasavana barxhAmxMDanitarama\\
-nirade suTaTx kaThoVra teVjoVyukatx PAlAkaSx\\
-paramakaruNAsikatx shabareV\\
-shavxra manoVharanayanayugamxda\\
-sarasadali nelasutetx tAnuM shaMtivetitxrade
-\end{shl}
+\meaning{\arthanonum{yoVgapaMcakagaLalilx oMdu; paratatatxvXdalilx manasasxnunx aikayxgoLisuvudu.}
+\ullekha{maMtarxyoVgasahitamAgi manapavanaMgaLoMdugUDi mUlAdhAradiM suSumAnxnADiV mAgaRdoLeYdi shiroVmadhayxgata paramAtamx teVjasisxnoLA manoVlayavahudeV sapxshaRyoVga (viveVka. 49).}}
 \end{entry}
 
 \begin{entry}
 \word{samxraNaBakitx}
 \src{saM}
-\mng{oMbatutx vidha BakitxgaLalilx oMdu. sadA parashivana dhAyxna mADuvudu.}
+\meaning{\arthanonum{oMbatutx vidha BakitxgaLalilx oMdu. sadA parashivana dhAyxna mADuvudu.}}
+\smallskip
 \begin{shl}
 sharxvaNaM kiVtaRnaM shaMBoVH samxraNaM pAdaseVvanamf |\\
 acaRnaM vaMdanaM dAsayxM saKayxmAtamxniveVdanamf ||
 \end{shl}
+\smallskip
 \pauthor{(si. shi., 9. 2-3)}
+\smallskip
 \begin{shl}
 samxraNa dhAyxnamf |
 \end{shl}
+\smallskip
 \pauthor{(si. shi. tatatxvX. parx., 9. 2-3)}
-\SEE{navavidha Bakitx}
-\end{entry}
-
-\begin{entry}
-\word{samxrahara}
-\src{saM}
-\gl{}
-\info{}{}{}{}
-\begin{shl}
-BasomxVdUdhxlitavigarxhaH samxraharaH... : 67 : 27
-\end{shl}
+\smallskip
+\newmeaning{\arthanonum{\SEE{navavidha Bakitx}}}
 \end{entry}
 
 \begin{entry}
 \word{samxrAri}
 \src{saM}
-\mng{maKAri, kAlAri, purAri, samxrAri, veVdAri eMba aidu vidha paMcamaralilx (viVrasheYva Bakatxralilx) obabx. samxrAriyu shirxV sheYlapiVThada BakatxnAgidudx, vaqSaBagoVtarx. mUlaguru paMDitArAdhayx, sUtarx mukAtxgucaCx, sUthxlapaMcAkaSxriV maMtarx (OM hArxM hirxVM namaH shivAya).}
+\meaning{\arthanonum{maKAri, kAlAri, purAri, samxrAri, veVdAri eMba aidu vidha paMcamaralilx (viVrasheYva Bakatxralilx) obabx. samxrAriyu shirxV sheYlapiVThada BakatxnAgidudx, vaqSaBagoVtarx. mUlaguru paMDitArAdhayx, sUtarx mukAtxgucaCx, sUthxlapaMcAkaSxriV maMtarx (OM hArxM hirxVM namaH shivAya).}}
+\smallskip
 \begin{shl}
 maKArishacx kAlAriH purArisutx samxrAri veY |\\
 samxrAripaMcamasAyxshacx goVtarx veY vaqSaBABidhamf |\\
@@ -298,8 +237,11 @@ OM hArxM hirxVM namaH shivAya savoRVtakxqqSoTxVyamiVritaH ||\\
 atAyxsharxmiV gaqhasathxH sAyxdiSaTxliMgAcaRkoV BaveVtf |\\
 EteYshacx lakaSxNeYyuRkatxH samxrAriH paMcamasatxthA ||
 \end{shl}
+\smallskip
 \pauthor{(suparx. A. ulelxVKa: viV. sa. saM., 5. 8, 32-25)}
 \end{entry}
+
+%raghu, gv = 4, 013.pdf = 139, 014.pdf = 103
 
 \begin{entry}
 \word{samxqqti}
